# pre-commit-hello-world

./: .pre-commit-hooks.yaml  .pre-commit.hooks.yaml  README.md  pyproject.toml  setup.cfj
pre_commit_hello_world/: main.py  test.yaml  test2.yaml
