[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pre-commit-hello-world"
version = 1.0.0
description = ""
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
]
requires-python = "==3.10.*"
dependencies = [
    "pyyaml~=6.0"
]

[project.scripts]
pre-commit-hello-world = "pre_commit_hello_world.main:main"